# pytest-html-reporter2

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
html/: template.html
html_page/: archive_body.py  archive_row.py  floating_error.py  page_decor.py  row.py  screenshot_details.py  suite_row.py  template.py  test_row.py
pytest_html_reporter/: __init__.py  const_vars.py  html_reporter.py  plugin.py  util.py
pytest_html_reporter2/: html_reporter.py  plugin.py  time_converter.py  util.py
tests/functional/: readme.md  test_usefixtures.py  test_yield_fixture.py
tests/unit/: helper.py  test_mvc_pages.py  test_plugin.py  test_time_converter.py  test_util.py
